# VINS-Fusion

./: .gitignore
camera_models/: CMakeLists.txt  package.xml
config/alphasense/: alphasense_cam0_vins_fusion.yaml  alphasense_cam1_vins_fusion.yaml  alphasense_vins_fusion_config.yaml
config/euroc/: euroc_mono_imu_config.yaml  euroc_stereo_imu_config.yaml
config/neo/: neo_cam_0.yaml  neo_cam_1.yaml  neo_stereo_imu.yaml
config/pegasus/: 23026_cam_0.yaml  23026_cam_1.yaml  pegasus_stereo_imu.yaml
config/simulation/: vulkan_stereo_imu.yaml
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: keyframe.cpp  keyframe.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/comm_interface/: communicator_base.hpp  communicator_base_deprecated_deprecated.cpp  typedefs_deprecated.hpp
loop_fusion/src/comm_interface/msgs_deprecated/: msg_kf_base.cpp  msg_kf_base.hpp  msg_landmark_base.cpp  msg_landmark_base.hpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/src/estimator/: estimator.cpp  estimator.h  parameters.cpp  parameters.h
vins_estimator/src/utility/: visualization.cpp  visualization.h
vins_msgs/: CMakeLists.txt  package.xml
vins_msgs/msg/: preintegration_msg.msg
